--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/cookie": "^0.5.1",
+    "cookie": "^0.5.0",
     "jsonwebtoken": "^8.5.1",
     "next": "12.3.1",
     "react": "18.2.0",
