--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/cookie": "^0.5.1",
     "cookie": "^0.5.0",
+    "iron-session": "^6.2.1",
     "jsonwebtoken": "^8.5.1",
     "next": "12.3.1",
     "react": "18.2.0",
